Create a section for the Get Documents by IDs feature

--- a/meilisearch-release-changelog/v1.14.0.md
+++ b/meilisearch-release-changelog/v1.14.0.md
@@ -61,32 +61,32 @@ curl -H 'Content-Type: application/json' MEILISEARCH_URL/experimental-features -
 2. Send a settings task (`PATCH /indexes/INDEX_UID/settings`) containing an embedder with `source: "composite"`, and with the parameters `searchEmbedder` and `indexingEmbedder` describing the embedder at search time (resp. indexing time). For example, using a [Hugging Face inference endpoint](https://huggingface.co/inference-endpoints/dedicated)
 ```jsonc
 {
-    "embedders": {
-        "text": {
-            "source": "composite",
-            "searchEmbedder": {
-                "source": "huggingFace", // locally computed embeddings using a model from the Hugging Face Hub
-                "model": "baai/bge-base-en-v1.5",
-                "revision": "a5beb1e3e68b9ab74eb54cfd186867f64f240e1a"
-            },
-            "indexingEmbedder": {
-                "source": "rest", // remotely computed embeddings using Hugging Face inference endpoints
-                "url": "https://URL.endpoints.huggingface.cloud",
-                "apiKey": "hf_XXXXXXX",
-                "documentTemplate": "Your {{doc.template}}",
-                "request": {
-                    "inputs": [
-                        "{{text}}",
-                        "{{..}}"
-                    ]
-                },
-                "response": [
-                    "{{embedding}}",
-                    "{{..}}"
-                ]
-            }
-        }
+  "embedders": {
+    "text": {
+      "source": "composite",
+      "searchEmbedder": {
+        "source": "huggingFace", // locally computed embeddings using a model from the Hugging Face Hub
+        "model": "baai/bge-base-en-v1.5",
+        "revision": "a5beb1e3e68b9ab74eb54cfd186867f64f240e1a"
+      },
+      "indexingEmbedder": {
+        "source": "rest", // remotely computed embeddings using Hugging Face inference endpoints
+        "url": "https://URL.endpoints.huggingface.cloud",
+        "apiKey": "hf_XXXXXXX",
+        "documentTemplate": "Your {{doc.template}}",
+        "request": {
+          "inputs": [
+            "{{text}}",
+            "{{..}}"
+          ]
+        },
+        "response": [
+          "{{embedding}}",
+          "{{..}}"
+        ]
+      }
     }
+  }
 }
 ```
 3. Send documents to the index. They will be indexed remotely using the Hugging Face inference endpoint.
@@ -96,9 +96,45 @@ For more details about this feature, please refer to its [public usage page](htt
 
 Done by @dureuill in [#5371](https://github.com/meilisearch/meilisearch/pull/5371) and [#5401](https://github.com/meilisearch/meilisearch/pull/5401).
 
+## Retrieve multiple documents by IDs
+
+It is now possible to retrieve multiple documents by their IDs. you can do that by providing the list of documents IDs you want to retrieve on the `/documents` route.
+Note that the documents are *not* returned in the queried order but rather in arbitrary order and non-existent are ignored.
+
+```
+curl -H 'Content-Type: application/json' MEILISEARCH_URL/indexes/INDEX_UID/documents -d '{ "ids": ["cody", "finn", "brandy", "gambit"] }'
+```
+
+```jsonc
+{
+  "results": [
+    {
+      "id": "brandy",
+      "info": 13765493
+    },
+    {
+      "id": "finn",
+      "info": 35863
+    },
+    {
+      "id": "cody",
+      "info": 122263
+    },
+    {
+      "id": "gambit",
+      "info": 22222
+    }
+  ],
+  "offset": 0,
+  "limit": 20,
+  "total": 4
+}
+```
+
+Done by @dureuill in [#5384](https://github.com/meilisearch/meilisearch/pull/5384).
+
 ## Other improvements
 
-* Get multiple documents by ids by @dureuill in [#5384](https://github.com/meilisearch/meilisearch/pull/5384)
 * Support merging update and replacement operations by @Kerollmops in [#5293](https://github.com/meilisearch/meilisearch/pull/5293)
 * Display the internal indexing steps with timings on the `/batches` route by @Kerollmops in [#5356](https://github.com/meilisearch/meilisearch/pull/5356) and [#5364](https://github.com/meilisearch/meilisearch/pull/5364)
 * exhaustive facet search by @ManyTheFish in [#5369](https://github.com/meilisearch/meilisearch/pull/5369)
