Clarify some new features

--- a/meilisearch-release-changelog/v1.14.0.md
+++ b/meilisearch-release-changelog/v1.14.0.md
@@ -135,12 +135,12 @@ Done by @dureuill in [#5384](https://github.com/meilisearch/meilisearch/pull/538
 
 ## Other improvements
 
-* Support merging update and replacement operations by @Kerollmops in [#5293](https://github.com/meilisearch/meilisearch/pull/5293)
+* Batch PUT and POST documents when indexing them by @Kerollmops in [#5293](https://github.com/meilisearch/meilisearch/pull/5293)
 * Display the internal indexing steps with timings on the `/batches` route by @Kerollmops in [#5356](https://github.com/meilisearch/meilisearch/pull/5356) and [#5364](https://github.com/meilisearch/meilisearch/pull/5364)
-* exhaustive facet search by @ManyTheFish in [#5369](https://github.com/meilisearch/meilisearch/pull/5369)
+* Introduce a new parameter to get an exhaustive count when performing facet search by @ManyTheFish in [#5369](https://github.com/meilisearch/meilisearch/pull/5369)
 * Reduce RAM consumption of arroy by @irevoire in https://github.com/meilisearch/arroy/pull/105
-* Cache Embeddings in Search with an experimental feature by @dureuill in [#5418](https://github.com/meilisearch/meilisearch/pull/5418)
-* Extend the batch progress view to the indexing of vectors by @irevoire in [5420](https://github.com/meilisearch/meilisearch/pull/5420)
+* Cache Embeddings in Search with an experimental feature (Read more in the dedicated [discussion](https://github.com/orgs/meilisearch/discussions/818)) by @dureuill in [#5418](https://github.com/meilisearch/meilisearch/pull/5418)
+* Extend the batch progress view to the indexing of vectors by @irevoire in [#5420](https://github.com/meilisearch/meilisearch/pull/5420)
 
 # Fixes 🐞
 
