--- a/meilisearch-release-changelog/v1.14.0.md
+++ b/meilisearch-release-changelog/v1.14.0.md
@@ -4,7 +4,7 @@
 > [!WARNING]
 > Since this is a release candidate (RC), we do NOT recommend using it in a production environment. Is something not working as expected? We welcome [bug reports[#new]]((https://github.com/meilisearch/meilisearch/issues/new)/choose) and [feedback about new features](https://github.com/meilisearch/product/discussions).
 
-Meilisearch v1.14 exposes a more granular way to express your filterable attributes! 🎉 This release also improves the performances of semantic search, the indexing speed of embeddings and a new route to get multiple documents by IDs.
+Meilisearch v1.14 gives more granular control over which parts of filters you can disable for indexing performance optimization. This release also includes composite embedders, which can improve embedding generation during search and indexing, and a new route to retrieve multiple documents by their IDs.
 
 <!-- The following lines should NOT be put in the PRE-release changelogs -->
 🧰 All official Meilisearch integrations (including SDKs, clients, and other tools) are compatible with this Meilisearch release. Integration deployment happens between 4 to 48 hours after a new version becomes available.
@@ -14,63 +14,72 @@ Some SDKs might not include all new features. Consult the project repository for
 
 # New features and updates 🔥
 
-## Granular Filterable Attribute Settings
+## Granular filterable attribute settings
 
-This powerful feature empowers you to customize filterable attribute capabilities with great precision, optimizing indexing speeds by letting you activate only the filter features you need.
-To use the feature, use the new `filterableAttributes` format in the settings route (`PATCH /indexes/INDEX_UID/settings`):
+v1.14 gives you more control over which types of filter you want to disable in your searches. This allows you to further optimize indexing speeds by letting you activate only the filter features you need.
+
+Use `PATCH /indexes/INDEX_NAME/settings` to specify which filters you want to enable for each attribute in your documents:
 
 ```json
 {
 	"filterableAttributes": [
 	  {
 	    "attributePatterns": ["genre", "artist"],
-	    "features": { "facetSearch": true, "filter": { "equality": true, "comparison": false } }
+	    "features": { 
+	      "facetSearch": true, 
+	      "filter": { 
+	        "equality": true, 
+	        "comparison": false 
+	      }
+	    }
 	  },
 	  {
 	    "attributePatterns": ["rank"],
-	    "features": { "facetSearch": false, "filter": { "equality": true, "comparison": true } }
-	  },
-	  {
-	    "attributePatterns": ["albumId"],
-	    "features": { "facetSearch": false, "filter": { "equality": true, "comparison": false } }
+	    "features": {
+	      "facetSearch": false, 
+	      "filter": { 
+	        "equality": true, 
+	        "comparison": true
+	      }
+	    }
 	  }
 	]
 }
 ```
 
-> 🗒️  In this example, we activate/deactivate each feature depending on the usage of each filterable attribute, the `genre` and `artist` are expected to be strings so the facet search and the equality operators (`=`/`!=`) are activated, but, the comparison operators are deactivated (`>=`, `<=`, ...) because it's not useful and will save time during the indexing process.
-> However, the rank is expected to be a number, so the facet search is deactivated in favor of the the comparison operators.
-> Last, the albumId is expected to be unique, so only the equality operators (`=`/`!=`) are activated.
 
 For more details about this feature, please refer to its [public usage page](https://meilisearch.notion.site/API-usage-Settings-to-opt-out-indexing-features-filterableAttributes-1764b06b651f80aba8bdf359b2df3ca8)
 
 Done by @ManyTheFish in [#5254](https://github.com/meilisearch/meilisearch/pull/5254).
 
-## Composite Embedders
+## Composite embedders
 
-This feature allows using different embedders at search and indexing time, which is useful to optimize the embedder to each situation:
-- Using a remote embedder for indexing in bulk, as remote embedders provide the highest bandwidth (embeddings/s).
-- Using a local embedder for answering search queries, as local embedders provide the lowest latency (time to first embedding).
+This feature allows using different embedders at search and indexing time. This can be useful when optimizing AI-powered search performance. For example, you may prefer to use:
+- A remote embedder during indexing, as remote embedders have higher bandwidth and can generate more embeddings per second
+- A local embedder when answering to search queries, as local embedders have lower latency and can respond more quickly to user input
 
 To use the feature, follow these steps:
 
-1. Enable the `Composite embedders` feature from the Cloud dashboard or with the following:
+1. Enable the `Composite embedders` feature with the Meilisearch Cloud interface, or with the `/experimental-features` route:
+
+```sh
+curl MEILISEARCH_URL/experimental-features \
+  -H 'Content-Type: application/json'  \
+  -d '{"compositeEmbedders": true}'
 ```
-curl -H 'Content-Type: application/json' MEILISEARCH_URL/experimental-features -d '{"compositeEmbedders": true}'
-```
-2. Send a settings task (`PATCH /indexes/INDEX_UID/settings`) containing an embedder with `source: "composite"`, and with the parameters `searchEmbedder` and `indexingEmbedder` describing the embedder at search time (resp. indexing time). For example, using a [Hugging Face inference endpoint](https://huggingface.co/inference-endpoints/dedicated)
+2. Next, create an embedder, setting its `source` to `"composite"` and defining one `searchEmbedder` and one `indexingEmbedder`:
 ```jsonc
 {
   "embedders": {
     "text": {
       "source": "composite",
       "searchEmbedder": {
-        "source": "huggingFace", // locally computed embeddings using a model from the Hugging Face Hub
+        "source": "huggingFace",
         "model": "baai/bge-base-en-v1.5",
         "revision": "a5beb1e3e68b9ab74eb54cfd186867f64f240e1a"
       },
       "indexingEmbedder": {
-        "source": "rest", // remotely computed embeddings using Hugging Face inference endpoints
+        "source": "rest",
         "url": "https://URL.endpoints.huggingface.cloud",
         "apiKey": "hf_XXXXXXX",
         "documentTemplate": "Your {{doc.template}}",
@@ -89,17 +98,15 @@ curl -H 'Content-Type: application/json' MEILISEARCH_URL/experimental-features -
   }
 }
 ```
-3. Send documents to the index. They will be indexed remotely using the Hugging Face inference endpoint.
-4. Perform semantic search queries, they will be embedded using the local model fetched from the Hugging Face Hub.
+3. Once the composite embedder has been created, Meilisearch will use its `indexingEmbedder` during indexing and `searchEmbedder` when responding to user queries
 
 For more details about this feature, please refer to its [public usage page](https://www.notion.so/meilisearch/Composite-embedder-usage-14a4b06b651f81859dc3df21e8cd02a0?pvs=4#19f4b06b651f809ab3ecc0daae7d5856).
 
 Done by @dureuill in [#5371](https://github.com/meilisearch/meilisearch/pull/5371) and [#5401](https://github.com/meilisearch/meilisearch/pull/5401).
 
-## Retrieve multiple documents by IDs
+## Retrieve multiple documents by ID
 
-It is now possible to retrieve multiple documents by their IDs. you can do that by providing the list of documents IDs you want to retrieve on the `/documents` route.
-Note that the documents are *not* returned in the queried order but rather in arbitrary order and non-existent are ignored.
+It is now possible to retrieve multiple documents by their IDs:
 
 ```
 curl -H 'Content-Type: application/json' MEILISEARCH_URL/indexes/INDEX_UID/documents -d '{ "ids": ["cody", "finn", "brandy", "gambit"] }'
@@ -131,16 +138,19 @@ curl -H 'Content-Type: application/json' MEILISEARCH_URL/indexes/INDEX_UID/docum
 }
 ```
 
+> [!WARNING]  
+> Documents are *not* returned in the queried order. Non-existent documents are ignored.
+
 Done by @dureuill in [#5384](https://github.com/meilisearch/meilisearch/pull/5384).
 
 ## Other improvements
 
-* Batch PUT and POST documents when indexing them by @Kerollmops in [#5293](https://github.com/meilisearch/meilisearch/pull/5293)
-* Display the internal indexing steps with timings on the `/batches` route by @Kerollmops in [#5356](https://github.com/meilisearch/meilisearch/pull/5356) and [#5364](https://github.com/meilisearch/meilisearch/pull/5364)
-* Introduce a new parameter to get an exhaustive count when performing facet search by @ManyTheFish in [#5369](https://github.com/meilisearch/meilisearch/pull/5369)
+* Batch together `/documents` requests using either `PUT` or `POST` by @Kerollmops in [#5293](https://github.com/meilisearch/meilisearch/pull/5293)
+* Display timestamped internal indexing steps on the `/batches` route by @Kerollmops in [#5356](https://github.com/meilisearch/meilisearch/pull/5356) and [#5364](https://github.com/meilisearch/meilisearch/pull/5364)
+* Introduce `exhaustiveFacetCount` parameter to `/facet-search` route to retrieve an exhaustive facet count by @ManyTheFish in [#5369](https://github.com/meilisearch/meilisearch/pull/5369)
 * Reduce RAM consumption of arroy by @irevoire in https://github.com/meilisearch/arroy/pull/105
-* Cache Embeddings in Search with an experimental feature (Read more in the dedicated [discussion](https://github.com/orgs/meilisearch/discussions/818)) by @dureuill in [#5418](https://github.com/meilisearch/meilisearch/pull/5418)
-* Extend the batch progress view to the indexing of vectors by @irevoire in [#5420](https://github.com/meilisearch/meilisearch/pull/5420)
+* Experimental feature: Cache embeddings during search (Read more in the [feature discussion](https://github.com/orgs/meilisearch/discussions/818)) by @dureuill in [#5418](https://github.com/meilisearch/meilisearch/pull/5418)
+* Extend batch progress view to include indexing of vectors by @irevoire in [#5420](https://github.com/meilisearch/meilisearch/pull/5420)
 
 # Fixes 🐞
 
@@ -148,7 +158,7 @@ Done by @dureuill in [#5384](https://github.com/meilisearch/meilisearch/pull/538
 * Isolate word fst usage by @ManyTheFish in https://github.com/meilisearch/meilisearch/pull/5415
 * Fix CI to work with merge queues by @Kerollmops in https://github.com/meilisearch/meilisearch/pull/5456
 * Support fetching the pooling method from the model configuration by @dureuill in [#5355](https://github.com/meilisearch/meilisearch/pull/5355)
-* Make sure to delete useless prefixes by @Kerollmops in [#5413](https://github.com/meilisearch/meilisearch/pull/5413)
+* Delete unused prefixes by @Kerollmops in [#5413](https://github.com/meilisearch/meilisearch/pull/5413)
 
 # Misc
 
@@ -162,7 +172,7 @@ Done by @dureuill in [#5384](https://github.com/meilisearch/meilisearch/pull/538
 * CIs and tests
   * Improve test performance of get_index.rs  by @DerTimonius in [#5210](https://github.com/meilisearch/meilisearch/pull/5210)
   * Ollama Integration Tests by @Kerollmops in [#5308](https://github.com/meilisearch/meilisearch/pull/5308)
-  * Ensure the settings routes are now configurated when a new field is added to the Settings struct  by @MichaScant in [#5149](https://github.com/meilisearch/meilisearch/pull/5149)
+  * Ensure the settings routes are properly configured when a new field is added to the Settings struct by @MichaScant in [#5149](https://github.com/meilisearch/meilisearch/pull/5149)
   * Skip a snapshot test on Windows by @Kerollmops in [#5383](https://github.com/meilisearch/meilisearch/pull/5383)
 * Accept total batch size in human size by @Kerollmops in https://github.com/meilisearch/meilisearch/pull/5421
 * Avoid reindexing searchable order changes by @ManyTheFish in https://github.com/meilisearch/meilisearch/pull/5402
