Improve the fixes descriptions
Co-authored-by: Many the fish <many@meilisearch.com>

--- a/meilisearch-release-changelog/v1.14.0.md
+++ b/meilisearch-release-changelog/v1.14.0.md
@@ -151,14 +151,16 @@ Done by @dureuill in [#5384](https://github.com/meilisearch/meilisearch/pull/538
 * Reduce RAM consumption of arroy by @irevoire in https://github.com/meilisearch/arroy/pull/105
 * Experimental feature: Cache embeddings during search (Read more in the [feature discussion](https://github.com/orgs/meilisearch/discussions/818)) by @dureuill in [#5418](https://github.com/meilisearch/meilisearch/pull/5418)
 * Extend batch progress view to include indexing of vectors by @irevoire in [#5420](https://github.com/meilisearch/meilisearch/pull/5420)
+* Armenian characters are no longer case-sensitive by @ManyTheFish in https://github.com/meilisearch/meilisearch/pull/5454
 
 # Fixes 🐞
 
 * Geo update bug by @ManyTheFish in https://github.com/meilisearch/meilisearch/pull/5407
-* Isolate word fst usage by @ManyTheFish in https://github.com/meilisearch/meilisearch/pull/5415
+* Fix prefix search on attributes listed in `disabledOnAttributes` settings by @ManyTheFish in https://github.com/meilisearch/meilisearch/pull/5415 (fixes [#5347](https://github.com/meilisearch/meilisearch/issues/5347) and [#5452](https://github.com/meilisearch/meilisearch/issues/5452))
 * Fix CI to work with merge queues by @Kerollmops in https://github.com/meilisearch/meilisearch/pull/5456
 * Support fetching the pooling method from the model configuration by @dureuill in [#5355](https://github.com/meilisearch/meilisearch/pull/5355)
 * Delete unused prefixes by @Kerollmops in [#5413](https://github.com/meilisearch/meilisearch/pull/5413)
+* Fixes mini dashboard to prevent the panel from popping up every time by @curquiza in https://github.com/meilisearch/meilisearch/pull/5436
 
 # Misc
 
@@ -167,8 +169,6 @@ Done by @dureuill in [#5384](https://github.com/meilisearch/meilisearch/pull/538
   * Bump heed to v0.22 by @irevoire and @Kerollmops in [#5406](https://github.com/meilisearch/meilisearch/pull/5406)
   * Bump ring to v0.17.14 to compile on old aarch64 by @Kerollmops in https://github.com/meilisearch/meilisearch/pull/5423
   * Bump zip from 2.2.2 to 2.3.0 by @dependabot in https://github.com/meilisearch/meilisearch/pull/5426
-  * Update Charabia v0.9.3 by @ManyTheFish in https://github.com/meilisearch/meilisearch/pull/5454
-  * Update mini-dashboard to v0.2.19 version by @curquiza in https://github.com/meilisearch/meilisearch/pull/5436
 * CIs and tests
   * Improve test performance of get_index.rs  by @DerTimonius in [#5210](https://github.com/meilisearch/meilisearch/pull/5210)
   * Ollama Integration Tests by @Kerollmops in [#5308](https://github.com/meilisearch/meilisearch/pull/5308)
