Improve the changes description

--- a/meilisearch-release-changelog/v1.14.0.md
+++ b/meilisearch-release-changelog/v1.14.0.md
@@ -25,20 +25,20 @@ Use `PATCH /indexes/INDEX_NAME/settings` to specify which filters you want to en
 	"filterableAttributes": [
 	  {
 	    "attributePatterns": ["genre", "artist"],
-	    "features": { 
-	      "facetSearch": true, 
-	      "filter": { 
-	        "equality": true, 
-	        "comparison": false 
+	    "features": {
+	      "facetSearch": true,
+	      "filter": {
+	        "equality": true,
+	        "comparison": false
 	      }
 	    }
 	  },
 	  {
 	    "attributePatterns": ["rank"],
 	    "features": {
-	      "facetSearch": false, 
-	      "filter": { 
-	        "equality": true, 
+	      "facetSearch": false,
+	      "filter": {
+	        "equality": true,
 	        "comparison": true
 	      }
 	    }
@@ -138,7 +138,7 @@ curl -H 'Content-Type: application/json' MEILISEARCH_URL/indexes/INDEX_UID/docum
 }
 ```
 
-> [!WARNING]  
+> [!WARNING]
 > Documents are *not* returned in the queried order. Non-existent documents are ignored.
 
 Done by @dureuill in [#5384](https://github.com/meilisearch/meilisearch/pull/5384).
@@ -152,8 +152,9 @@ Done by @dureuill in [#5384](https://github.com/meilisearch/meilisearch/pull/538
 * Experimental feature: Cache embeddings during search (Read more in the [feature discussion](https://github.com/orgs/meilisearch/discussions/818)) by @dureuill in [#5418](https://github.com/meilisearch/meilisearch/pull/5418)
 * Extend batch progress view to include indexing of vectors by @irevoire in [#5420](https://github.com/meilisearch/meilisearch/pull/5420)
 * Armenian characters are no longer case-sensitive by @ManyTheFish in https://github.com/meilisearch/meilisearch/pull/5454
+* Avoid reindexing searchables when the order changes by @ManyTheFish in https://github.com/meilisearch/meilisearch/pull/5402
 
-# Fixes 🐞
+# Fixes
 
 * Geo update bug by @ManyTheFish in https://github.com/meilisearch/meilisearch/pull/5407
 * Fix prefix search on attributes listed in `disabledOnAttributes` settings by @ManyTheFish in https://github.com/meilisearch/meilisearch/pull/5415 (fixes [#5347](https://github.com/meilisearch/meilisearch/issues/5347) and [#5452](https://github.com/meilisearch/meilisearch/issues/5452))
@@ -174,12 +175,13 @@ Done by @dureuill in [#5384](https://github.com/meilisearch/meilisearch/pull/538
   * Ollama Integration Tests by @Kerollmops in [#5308](https://github.com/meilisearch/meilisearch/pull/5308)
   * Ensure the settings routes are properly configured when a new field is added to the Settings struct by @MichaScant in [#5149](https://github.com/meilisearch/meilisearch/pull/5149)
   * Skip a snapshot test on Windows by @Kerollmops in [#5383](https://github.com/meilisearch/meilisearch/pull/5383)
+  * Fix CI to work with merge queues by @Kerollmops in https://github.com/meilisearch/meilisearch/pull/5456
 * Accept total batch size in human size by @Kerollmops in https://github.com/meilisearch/meilisearch/pull/5421
-* Avoid reindexing searchable order changes by @ManyTheFish in https://github.com/meilisearch/meilisearch/pull/5402
 * Add more progress levels to measure merging by @Kerollmops in https://github.com/meilisearch/meilisearch/pull/5422
-> ⚠️ When working with it in the doc or the integrations, please consider that the content can change anytime. It must not be enforced.
+* Isolate word fst usage to dedicate it to typo-correction by @ManyTheFish in https://github.com/meilisearch/meilisearch/pull/5415
+> ⚠️ Please consider that the batches stats content can change anytime.
 * Show database sizes batches by @Kerollmops in https://github.com/meilisearch/meilisearch/pull/5457
-> ⚠️ When working with it in the doc or the integrations, please consider that the content can change anytime. It must not be enforced.
+> ⚠️ Please consider that the batches stats content can change anytime.
 
 ❤️ Thanks again to our external contributors:
 - [Meilisearch](https://github.com/meilisearch/meilisearch): @MichaScant
