Add the Charabia contributors

--- a/meilisearch-release-changelog/v1.14.0.md
+++ b/meilisearch-release-changelog/v1.14.0.md
@@ -187,3 +187,4 @@ Done by @dureuill in [#5384](https://github.com/meilisearch/meilisearch/pull/538
 - [Meilisearch](https://github.com/meilisearch/meilisearch): @MichaScant
 - [Heed](https://github.com/meilisearch/heed): @oXtxNt9U
 - [Arroy](https://github.com/meilisearch/arroy): @ptondereau
+- [Charabia](https://github.com/meilisearch/charabia): @NarHakobyan, @mosuka
