--- a/meilisearch-release-changelog/v1.14.0.md
+++ b/meilisearch-release-changelog/v1.14.0.md
@@ -162,6 +162,8 @@ Done by @dureuill in [#5384](https://github.com/meilisearch/meilisearch/pull/538
 * Support fetching the pooling method from the model configuration by @dureuill in [#5355](https://github.com/meilisearch/meilisearch/pull/5355)
 * Delete unused prefixes by @Kerollmops in [#5413](https://github.com/meilisearch/meilisearch/pull/5413)
 * Fixes mini dashboard to prevent the panel from popping up every time by @curquiza in https://github.com/meilisearch/meilisearch/pull/5436
+* Enabling `rankingScoreThreshold` no longer causes `_rankingScore` to be miscalculated by @barloes and @dureuill in https://github.com/meilisearch/meilisearch/pull/5313
+* Validate dimensions of embedding when receiving documents with `_vectors` by @dureuill in https://github.com/meilisearch/meilisearch/pull/5478
 
 # Misc
 
@@ -177,11 +179,12 @@ Done by @dureuill in [#5384](https://github.com/meilisearch/meilisearch/pull/538
   * Skip a snapshot test on Windows by @Kerollmops in [#5383](https://github.com/meilisearch/meilisearch/pull/5383)
   * Fix CI to work with merge queues by @Kerollmops in https://github.com/meilisearch/meilisearch/pull/5456
 * Accept total batch size in human size by @Kerollmops in https://github.com/meilisearch/meilisearch/pull/5421
-* Add more progress levels to measure merging by @Kerollmops in https://github.com/meilisearch/meilisearch/pull/5422
+* Add more progress levels to measure merging and post-processing by @Kerollmops in https://github.com/meilisearch/meilisearch/pull/5422 and https://github.com/meilisearch/meilisearch/pull/5468
 * Isolate word fst usage to dedicate it to typo-correction by @ManyTheFish in https://github.com/meilisearch/meilisearch/pull/5415
 > ⚠️ Please consider that the batches stats content can change anytime.
-* Show database sizes batches by @Kerollmops in https://github.com/meilisearch/meilisearch/pull/5457
+* Show database sizes batches by @Kerollmops in https://github.com/meilisearch/meilisearch/pull/5457 and https://github.com/meilisearch/meilisearch/pull/5464
 > ⚠️ Please consider that the batches stats content can change anytime.
+* Improve performance of computing document stats by @Kerollmops in https://github.com/meilisearch/meilisearch/pull/5465
 
 ❤️ Thanks again to our external contributors:
 - [Meilisearch](https://github.com/meilisearch/meilisearch): @MichaScant
