Update granular filterable link to point to the doc

--- a/meilisearch-release-changelog/v1.14.0.md
+++ b/meilisearch-release-changelog/v1.14.0.md
@@ -48,7 +48,7 @@ Use `PATCH /indexes/INDEX_NAME/settings` to specify which filters you want to en
 ```
 
 
-For more details about this feature, please refer to its [public usage page](https://meilisearch.notion.site/API-usage-Settings-to-opt-out-indexing-features-filterableAttributes-1764b06b651f80aba8bdf359b2df3ca8)
+For more details about this feature, please refer to [the dedicated documentation page](https://www.meilisearch.com/docs/reference/api/settings#filterable-attribute-object).
 
 Done by @ManyTheFish in [#5254](https://github.com/meilisearch/meilisearch/pull/5254).
 
