--- a/meilisearch-release-changelog/v1.15.0.md
+++ b/meilisearch-release-changelog/v1.15.0.md
@@ -4,7 +4,7 @@
 > [!WARNING]
 > Since this is a release candidate (RC), we do NOT recommend using it in a production environment. Is something not working as expected? We welcome [bug reports](https://github.com/meilisearch/meilisearch/issues/new/choose) and [feedback about new features](https://github.com/meilisearch/product/discussions).
 
-Meilisearch v1.15.0 introduces improves the indexing performances and dumpless experience.
+Meilisearch v1.15.0 introduces the deactivation of typo tolerance on numbers and allows lexicographic filtering of strings.
 
 <!-- The following lines should NOT be put in the PRE-release changelogs -->
 🧰 All official Meilisearch integrations (including SDKs, clients, and other tools) are compatible with this Meilisearch release. Integration deployment happens between 4 to 48 hours after a new version becomes available.
@@ -20,22 +20,42 @@ TBD
 
 Done by @ManyTheFish in [#5494](https://github.com/meilisearch/meilisearch/pull/5494).
 
-## Make it Possible to Rollback Dumpless Upgrades
+## Allow Lexicographic Filtering of Strings
 
-TBD
+Adds the ability to filter strings lexicographically by enabling comparison operators (<, <=, >, >=, TO) on string values.
+This new feature is useful when you want to filter on human-readable dates.
 
-Done by @dureuill in [#5523](https://github.com/meilisearch/meilisearch/pull/5523).
+The following example shows how to filter movies released after 2024:
+```
+curl -X POST 'http://localhost:7700/indexes/movies/search' \
+  -H 'Content-Type: application/json' \
+  -d '{
+    "filter": "release_date >= '2024'"
+  }'
+```
+
+The following example shows how to filter movies released between June 2024 and June 2025:
+```
+curl -X POST 'http://localhost:7700/indexes/movies/search' \
+  -H 'Content-Type: application/json' \
+  -d '{
+    "filter": "release_date 2024-06 TO 2025-06"
+  }'
+```
+
+Done by @dureuill in [#5535](https://github.com/meilisearch/meilisearch/pull/5535).
 
 ## Other improvements
 
-* Enhance filterable error messages by @CodeMan62 in [#5425](https://github.com/meilisearch/meilisearch/pull/5425)
-* Improve error messages on embeddings dimension mismatch by @vuthanhtung2412 in [#5449](https://github.com/meilisearch/meilisearch/pull/5449)
+* Adds the ability to cancel the upgrade to a newer version by rolling back all the upgraded indexes by @dureuill in [#5523](https://github.com/meilisearch/meilisearch/pull/5523)
 * Support EC private key as SSL certificate by @HDT3213 in [#5471](https://github.com/meilisearch/meilisearch/pull/5471)
 * Stop compacting the snapshots to speedup their generation by @dureuill in [#5498](https://github.com/meilisearch/meilisearch/pull/5498)
-* Update network URL validation error message format to match expected by @CodeMan62 in [#5486](https://github.com/meilisearch/meilisearch/pull/5486)
 * Add a new `batchCreationComplete` field in the batches stats by @dureuill in [#5488](https://github.com/meilisearch/meilisearch/pull/5488) and [#5530](https://github.com/meilisearch/meilisearch/pull/5530)
-* Expose the size of the status of the task queue in the prometheus metrics by @DanasFi in [#5512](https://github.com/meilisearch/meilisearch/pull/5512)
 * Display the time spent searching in the vector store in the logs by @Kerollmops in [#5525](https://github.com/meilisearch/meilisearch/pull/5525)
+* Enhance filterable error messages by @CodeMan62 in [#5425](https://github.com/meilisearch/meilisearch/pull/5425)
+* Improve error messages on embeddings dimension mismatch by @vuthanhtung2412 in [#5449](https://github.com/meilisearch/meilisearch/pull/5449)
+* Update network URL validation error message format to match expected by @CodeMan62 in [#5486](https://github.com/meilisearch/meilisearch/pull/5486)
+* Expose the size of the status of the task queue in the prometheus metrics by @DanasFi in [#5512](https://github.com/meilisearch/meilisearch/pull/5512) related to the [Prometheus Metrics experimental features](https://github.com/orgs/meilisearch/discussions/625)
 
 # Fixes 🐞
 
