Add Deactivate Typo Tolerance on Numbers section

--- a/meilisearch-release-changelog/v1.15.0.md
+++ b/meilisearch-release-changelog/v1.15.0.md
@@ -16,7 +16,20 @@ Some SDKs might not include all new features. Consult the project repository for
 
 ## Deactivate Typo Tolerance on Numbers
 
-TBD
+Meilisearch now allows you to deactivate the typo tolerance on numbers by setting the `typoTolerance.disableOnNumbers` to `true` in the index settings.
+
+The following example shows how to deactivate the typo tolerance on numbers:
+```
+curl -X POST 'http://localhost:7700/indexes/movies/settings' \
+  -H 'Content-Type: application/json' \
+  -d '{
+    "typoTolerance": {"disableOnNumbers": true}
+  }'
+```
+
+Meilisearch typo tolerance freely replaces any digit with another without computing the difference: 2024 will equally match 2025, 2004, and 20240,
+deactivating the typo tolerance on numbers will reduce the search recall in favor of precision (reducing false positives).
+Moreover, it will also speed up the indexing process on data with many sparse numbers by avoiding to index all the numbers in the typo tolerance database.
 
 Done by @ManyTheFish in [#5494](https://github.com/meilisearch/meilisearch/pull/5494).
 
