--- a/meilisearch-release-changelog/v1.15.0.md
+++ b/meilisearch-release-changelog/v1.15.0.md
@@ -4,7 +4,7 @@
 > [!WARNING]
 > Since this is a release candidate (RC), we do NOT recommend using it in a production environment. Is something not working as expected? We welcome [bug reports](https://github.com/meilisearch/meilisearch/issues/new/choose) and [feedback about new features](https://github.com/meilisearch/product/discussions).
 
-Meilisearch v1.15.0 introduces the deactivation of typo tolerance on numbers and allows lexicographic filtering of strings.
+Meilisearch v1.15 adds a new typo tolerance setting, allowing you to disable typo tolerance for numbers. It also enables comparison operators for string filters.
 
 <!-- The following lines should NOT be put in the PRE-release changelogs -->
 🧰 All official Meilisearch integrations (including SDKs, clients, and other tools) are compatible with this Meilisearch release. Integration deployment happens between 4 to 48 hours after a new version becomes available.
