--- a/meilisearch-release-changelog/v1.15.0.md
+++ b/meilisearch-release-changelog/v1.15.0.md
@@ -14,7 +14,7 @@ Some SDKs might not include all new features. Consult the project repository for
 
 # New features and updates 🔥
 
-## Deactivate Typo Tolerance on Numbers
+## Disable typo tolerance for numbers
 
 Meilisearch now allows you to deactivate the typo tolerance on numbers by setting the `typoTolerance.disableOnNumbers` to `true` in the index settings.
 
