--- a/meilisearch-release-changelog/v1.15.0.md
+++ b/meilisearch-release-changelog/v1.15.0.md
@@ -16,9 +16,8 @@ Some SDKs might not include all new features. Consult the project repository for
 
 ## Disable typo tolerance for numbers
 
-Meilisearch now allows you to deactivate the typo tolerance on numbers by setting the `typoTolerance.disableOnNumbers` to `true` in the index settings.
+Set `typoTolerance.disableOnNumbers` to `true` to disable typo tolerance for numbers:
 
-The following example shows how to deactivate the typo tolerance on numbers:
 ```
 curl -X POST 'http://localhost:7700/indexes/movies/settings' \
   -H 'Content-Type: application/json' \
@@ -27,9 +26,7 @@ curl -X POST 'http://localhost:7700/indexes/movies/settings' \
   }'
 ```
 
-Meilisearch typo tolerance freely replaces any digit with another without computing the difference: 2024 will equally match 2025, 2004, and 20240,
-deactivating the typo tolerance on numbers will reduce the search recall in favor of precision (reducing false positives).
-Moreover, it will also speed up the indexing process on data with many sparse numbers by avoiding to index all the numbers in the typo tolerance database.
+Deactivating the typo tolerance on numbers can be useful when trying to reduce false positives, such as a query term `2024` returning results that include `2025` and `2004`. It may also improve indexing performance.
 
 Done by @ManyTheFish in [#5494](https://github.com/meilisearch/meilisearch/pull/5494).
 
