--- a/meilisearch-release-changelog/v1.15.0.md
+++ b/meilisearch-release-changelog/v1.15.0.md
@@ -30,7 +30,7 @@ Deactivating the typo tolerance on numbers can be useful when trying to reduce f
 
 Done by @ManyTheFish in [#5494](https://github.com/meilisearch/meilisearch/pull/5494).
 
-## Allow Lexicographic Filtering of Strings
+## Lexicographic string filters
 
 Adds the ability to filter strings lexicographically by enabling comparison operators (<, <=, >, >=, TO) on string values.
 This new feature is useful when you want to filter on human-readable dates.
