--- a/meilisearch-release-changelog/v1.15.0.md
+++ b/meilisearch-release-changelog/v1.15.0.md
@@ -32,26 +32,16 @@ Done by @ManyTheFish in [#5494](https://github.com/meilisearch/meilisearch/pull/
 
 ## Lexicographic string filters
 
-Adds the ability to filter strings lexicographically by enabling comparison operators (<, <=, >, >=, TO) on string values.
-This new feature is useful when you want to filter on human-readable dates.
-
-The following example shows how to filter movies released after 2024:
+This release allows you to filter strings lexicographically by enabling comparison operators (<, <=, >, >=, TO) on string values:
 ```
 curl -X POST 'http://localhost:7700/indexes/movies/search' \
   -H 'Content-Type: application/json' \
   -d '{
-    "filter": "release_date >= '2024'"
+    "filter": "release_date >= '2024-06'"
   }'
 ```
 
-The following example shows how to filter movies released between June 2024 and June 2025:
-```
-curl -X POST 'http://localhost:7700/indexes/movies/search' \
-  -H 'Content-Type: application/json' \
-  -d '{
-    "filter": "release_date 2024-06 TO 2025-06"
-  }'
-```
+This new feature can be particularly useful when filtering human-readable dates.
 
 Done by @dureuill in [#5535](https://github.com/meilisearch/meilisearch/pull/5535).
 
