--- a/meilisearch-release-changelog/v1.15.0.md
+++ b/meilisearch-release-changelog/v1.15.0.md
@@ -47,7 +47,7 @@ Done by @dureuill in [#5535](https://github.com/meilisearch/meilisearch/pull/553
 
 ## Other improvements
 
-* Adds the ability to cancel the upgrade to a newer version by rolling back all the upgraded indexes by @dureuill in [#5523](https://github.com/meilisearch/meilisearch/pull/5523)
+* Allows cancelling an upgrade to a new Meilisearch version by rolling back all upgraded indexes by @dureuill in [#5523](https://github.com/meilisearch/meilisearch/pull/5523)
 * Support EC private key as SSL certificate by @HDT3213 in [#5471](https://github.com/meilisearch/meilisearch/pull/5471)
 * Stop compacting the snapshots to speedup their generation by @dureuill in [#5498](https://github.com/meilisearch/meilisearch/pull/5498)
 * Add a new `batchCreationComplete` field in the batches stats by @dureuill in [#5488](https://github.com/meilisearch/meilisearch/pull/5488) and [#5530](https://github.com/meilisearch/meilisearch/pull/5530)
