--- a/meilisearch-release-changelog/v1.15.0.md
+++ b/meilisearch-release-changelog/v1.15.0.md
@@ -49,7 +49,7 @@ Done by @dureuill in [#5535](https://github.com/meilisearch/meilisearch/pull/553
 
 * Allows cancelling an upgrade to a new Meilisearch version by rolling back all upgraded indexes by @dureuill in [#5523](https://github.com/meilisearch/meilisearch/pull/5523)
 * Support EC private key as SSL certificate by @HDT3213 in [#5471](https://github.com/meilisearch/meilisearch/pull/5471)
-* Stop compacting the snapshots to speedup their generation by @dureuill in [#5498](https://github.com/meilisearch/meilisearch/pull/5498)
+* Stop compacting snapshots to speed up their generation by @dureuill in [#5498](https://github.com/meilisearch/meilisearch/pull/5498)
 * Add a new `batchCreationComplete` field in the batches stats by @dureuill in [#5488](https://github.com/meilisearch/meilisearch/pull/5488) and [#5530](https://github.com/meilisearch/meilisearch/pull/5530)
 * Display the time spent searching in the vector store in the logs by @Kerollmops in [#5525](https://github.com/meilisearch/meilisearch/pull/5525)
 * Enhance filterable error messages by @CodeMan62 in [#5425](https://github.com/meilisearch/meilisearch/pull/5425)
