--- a/meilisearch-release-changelog/v1.15.0.md
+++ b/meilisearch-release-changelog/v1.15.0.md
@@ -52,7 +52,7 @@ Done by @dureuill in [#5535](https://github.com/meilisearch/meilisearch/pull/553
 * Stop compacting snapshots to speed up their generation by @dureuill in [#5498](https://github.com/meilisearch/meilisearch/pull/5498)
 * Add new `batchCreationComplete` field in the batches stats by @dureuill in [#5488](https://github.com/meilisearch/meilisearch/pull/5488) and [#5530](https://github.com/meilisearch/meilisearch/pull/5530)
 * Display the time spent searching in the vector store in the logs by @Kerollmops in [#5525](https://github.com/meilisearch/meilisearch/pull/5525)
-* Enhance filterable error messages by @CodeMan62 in [#5425](https://github.com/meilisearch/meilisearch/pull/5425)
+* Improve filterable error messages by @CodeMan62 in [#5425](https://github.com/meilisearch/meilisearch/pull/5425)
 * Improve error messages on embeddings dimension mismatch by @vuthanhtung2412 in [#5449](https://github.com/meilisearch/meilisearch/pull/5449)
 * Update network URL validation error message format to match expected by @CodeMan62 in [#5486](https://github.com/meilisearch/meilisearch/pull/5486)
 * Expose the size of the status of the task queue in the prometheus metrics by @DanasFi in [#5512](https://github.com/meilisearch/meilisearch/pull/5512) related to the [Prometheus Metrics experimental features](https://github.com/orgs/meilisearch/discussions/625)
