--- a/meilisearch-release-changelog/v1.15.0.md
+++ b/meilisearch-release-changelog/v1.15.0.md
@@ -54,27 +54,27 @@ Done by @dureuill in [#5535](https://github.com/meilisearch/meilisearch/pull/553
 * Add log field tracking time spent searching in the vector store by @Kerollmops in [#5525](https://github.com/meilisearch/meilisearch/pull/5525)
 * Improve filterable error messages by @CodeMan62 in [#5425](https://github.com/meilisearch/meilisearch/pull/5425)
 * Improve error messages on embeddings dimension mismatch by @vuthanhtung2412 in [#5449](https://github.com/meilisearch/meilisearch/pull/5449)
-* Update network URL validation error message format to match expected by @CodeMan62 in [#5486](https://github.com/meilisearch/meilisearch/pull/5486)
-* Expose the size of the status of the task queue in the prometheus metrics by @DanasFi in [#5512](https://github.com/meilisearch/meilisearch/pull/5512) related to the [Prometheus Metrics experimental features](https://github.com/orgs/meilisearch/discussions/625)
+* Update `/network` URL validation error message format by @CodeMan62 in [#5486](https://github.com/meilisearch/meilisearch/pull/5486)
+* Expose the task queue's status size in the Prometheus metrics by @DanasFi in [#5512](https://github.com/meilisearch/meilisearch/pull/5512)
 
 # Fixes 🐞
 
 * Fix `_matchesPosition` length calculation to improve client-side cropping by @shaokeyibb in [#5446](https://github.com/meilisearch/meilisearch/pull/5446)
-* Fix the `_geo` ranking rule by @HDT3213 in [#5487](https://github.com/meilisearch/meilisearch/pull/5487)
+* Fix `_geo` ranking rule by @HDT3213 in [#5487](https://github.com/meilisearch/meilisearch/pull/5487)
 
 # Misc
 
 * Dependencies updates
-  * Update the Rust version to 1.85.1 by @Kerollmops in [#5480](https://github.com/meilisearch/meilisearch/pull/5480)
+  * Update Rust to 1.85.1 by @Kerollmops in [#5480](https://github.com/meilisearch/meilisearch/pull/5480)
   * Update charabia v0.9.3 by @ManyTheFish in [#5466](https://github.com/meilisearch/meilisearch/pull/5466)
-  * Update the prometheus version to fix a vulnerability by @Kerollmops in [#5513](https://github.com/meilisearch/meilisearch/pull/5513)
+  * Update the Prometheus to fix a security vulnerability by @Kerollmops in [#5513](https://github.com/meilisearch/meilisearch/pull/5513)
 * CIs and tests
   * Setup the Milestone CI to update the Ruleset by @Kerollmops in [#5444](https://github.com/meilisearch/meilisearch/pull/5444)
-  * Make the CI work with the GitHub Merge Queues Grouping by @Kerollmops in [#5445](https://github.com/meilisearch/meilisearch/pull/5445)
+  * Make the CI work with GitHub's merge queue grouping by @Kerollmops in [#5445](https://github.com/meilisearch/meilisearch/pull/5445)
   * Remove Bors references from the repository by @Kerollmops in [#5447](https://github.com/meilisearch/meilisearch/pull/5447)
   * Split unit tests for tasks by @shu-kitamura in [#5424](https://github.com/meilisearch/meilisearch/pull/5424)
 * Misc
-  * Improve the process for dumpless upgrade to ensure compatibility by @irevoire in [#5395](https://github.com/meilisearch/meilisearch/pull/5395)
+  * Improve dumpless upgrade compatibility by @irevoire in [#5395](https://github.com/meilisearch/meilisearch/pull/5395)
   * Fix links and formatting in README for clarity and consistency by @ZeroZ-lab in [#5533](https://github.com/meilisearch/meilisearch/pull/5533)
 
 ❤️ Thanks again to our external contributors:
