--- a/meilisearch-release-changelog/v1.15.0.md
+++ b/meilisearch-release-changelog/v1.15.0.md
@@ -50,7 +50,7 @@ Done by @dureuill in [#5535](https://github.com/meilisearch/meilisearch/pull/553
 * Allows cancelling an upgrade to a new Meilisearch version by rolling back all upgraded indexes by @dureuill in [#5523](https://github.com/meilisearch/meilisearch/pull/5523)
 * Support EC private key as SSL certificate by @HDT3213 in [#5471](https://github.com/meilisearch/meilisearch/pull/5471)
 * When passing the relevant [CLI option](https://github.com/orgs/meilisearch/discussions/833), stop compacting snapshots, to speed up their generation by @dureuill and @irevoire in [#5498](https://github.com/meilisearch/meilisearch/pull/5498) and [#5560](https://github.com/meilisearch/meilisearch/pull/5560)
-* Add new `batchCreationComplete` field in the batches stats by @dureuill in [#5488](https://github.com/meilisearch/meilisearch/pull/5488) and [#5530](https://github.com/meilisearch/meilisearch/pull/5530)
+* Add new `batchStrategy` field in the batches stats by @dureuill in [#5488](https://github.com/meilisearch/meilisearch/pull/5488), [#5530](https://github.com/meilisearch/meilisearch/pull/5530) and [#5588](https://github.com/meilisearch/meilisearch/pull/5588)
 * Add log field tracking time spent searching in the vector store by @Kerollmops in [#5525](https://github.com/meilisearch/meilisearch/pull/5525)
 * Improve filterable error messages by @CodeMan62 in [#5425](https://github.com/meilisearch/meilisearch/pull/5425)
 * Improve error messages on embeddings dimension mismatch by @vuthanhtung2412 in [#5449](https://github.com/meilisearch/meilisearch/pull/5449)
@@ -64,6 +64,7 @@ Done by @dureuill in [#5535](https://github.com/meilisearch/meilisearch/pull/553
 * Fix a panic in the search that could happen when looking for typos with a search prefix having more than 65k possible hits in the DB by @dureuill in [#5564](https://github.com/meilisearch/meilisearch/pull/5564)
 * Make sure that passing `MEILI_EXPERIMENTAL_MAX_NUMBER_OF_BATCHED_TASKS` to 0 results in Meilisearch never processing any kind of task. By @irevoire in [#5565](https://github.com/meilisearch/meilisearch/pull/5565)
 * Forbid value `0` for `maxTotalHits` in the index settings by @irevoire in [#5566](https://github.com/meilisearch/meilisearch/pull/5566)
+* No longer reject `documentTemplate`s that use array filters on documents (e.g. `join`) by @dureuill in [#5593](https://github.com/meilisearch/meilisearch/pull/5593)
 
 # Misc
 
