--- a/meilisearch-release-changelog/v1.15.0.md
+++ b/meilisearch-release-changelog/v1.15.0.md
@@ -14,6 +14,43 @@ Some SDKs might not include all new features. Consult the project repository for
 
 # New features and updates 🔥
 
+## Chat with your indexes
+
+After enabling the experimental chat feature, you can create a chat workspace with the appropriate settings.
+We [have a guide](https://www.meilisearch.com/docs/guides/ai/getting_started_with_chat) on how to set up a good chat interface for your indexes.
+
+```bash
+curl -X POST 'http://localhost:7700/chats/my-assistant/settings' \
+  -H 'Content-Type: application/json' \
+  -d '{
+    "source": "openAi",
+    "apiKey": "sk-abc..."
+  }'
+```
+
+Then by using the official OpenAI SDK you'll be able to chat with your indexes.
+
+```javascript
+import OpenAI from 'openai';
+
+const client = new OpenAI({
+  baseURL: 'http://localhost:7700/chats/my-assistant',
+  apiKey: 'YOUR_MEILISEARCH_CHAT_API_KEY',
+});
+
+const completion = await client.chat.completions.create({
+  model: 'gpt-3.5-turbo',
+  messages: [{ role: 'user', content: 'What is Meilisearch?' }],
+  stream: true,
+});
+
+for await (const chunk of completion) {
+  console.log(chunk.choices[0]?.delta?.content || '');
+}
+```
+
+Done by @Kerollmops in [#5556](https://github.com/meilisearch/meilisearch/pull/5556).
+
 ## Disable typo tolerance for numbers
 
 Set `typoTolerance.disableOnNumbers` to `true` to disable typo tolerance for numbers:
