Add the external contributors

--- a/meilisearch-release-changelog/v1.15.0.md
+++ b/meilisearch-release-changelog/v1.15.0.md
@@ -120,5 +120,5 @@ Done by @dureuill in [#5535](https://github.com/meilisearch/meilisearch/pull/553
 
 ❤️ Thanks again to our external contributors:
 - [Meilisearch](https://github.com/meilisearch/meilisearch): @shu-kitamura, @shaokeyibb, @CodeMan62, @vuthanhtung2412, @HDT3213, @DanasFi, and @ZeroZ-lab.
-- [Charabia](https://github.com/meilisearch/charabia): <TBD: exhaustive list of external contributors of Charabia>
-- [Heed](https://github.com/meilisearch/heed): <TBD: exhaustive list of external contributors of Heed>
+- [Charabia](https://github.com/meilisearch/charabia): @luflow, @mosuka, and @HDT3213.
+- [RoaringBitmap](https://github.com/RoaringBitmap/roaring-rs): @lucascool12 and @Dr-Emann.
